# prisonersDilemma

./: CMakeLists.txt  CleverStrategy.cpp  CleverStrategy.h  DefaultStrategy.cpp  DefaultStrategy.h  Factory.cpp  Factory.h  Game.cpp  Game.h  IStrategy.h  MetaStrategy.cpp  MetaStrategy.h  Mode.h  MoveResult.h  SimpleStrategy.cpp  SimpleStrategy.h  SmartStrategy.cpp  SmartStrategy.h  SnitchStrategy.cpp  SnitchStrategy.h  func.cpp  func.h  how_to_use.txt  main.cpp
